--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,229 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Epilogue:ital,wght@0,100;0,200;0,300;0,500;0,600;0,700;0,800;0,900;1,700&display=swap');
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  list-style-type: none;
+  text-decoration: none;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  background: rgba(0,0,0, .98);
+  color: #FFF;
+  font-family: 'Epilogue', sans-serif;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.container {
+  width: 92%;
+  max-width: 1260px;
+  margin: auto;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.row {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  align-items: center;
+  gap: 2rem;
+  padding: 20px 0 50px;
+}
+
+p {
+  margin-bottom: 1.5rem;
+  line-height: 1.5rem;
+  font-size: 1.1rem;
+}
+
+/* Navbar Styles */
+.navbar {
+  display: flex;
+  position: fixed;
+  width: 100%;
+  background-color: #000;
+  justify-content: space-between;
+  align-items: center;
+  padding: 2.5rem;
+  z-index: 9000;
+}
+
+.nav-links {
+  display: flex;
+  justify-content: space-around;
+}
+
+.nav-link {
+  padding: 0 1rem;
+  font-size: 20px;
+}
+
+.logo {
+  font-size: 24px;
+  letter-spacing: 3px;
+}
+
+/* Hero Section */
+.hero {
+  padding: 200px 0 110px;
+}
+
+.hero-title {
+  font-size: 5rem;
+  font-weight: 500;
+}
+
+.hero-subtext {
+  font-size: 1.5rem;
+  line-height: 2.5rem;
+  font-weight: 400;
+  color: #B3B3B3;
+}
+
+/* Projects Section */
+.projects.row {
+  grid-template-columns:  repeat(2, 1fr);
+}
+.project-card {
   display: flex;
   flex-direction: column;
+  margin-bottom: .8rem;
+}
+
+.project-card img {
+  max-width: 100%;
+  height: 550px;
+  border-radius: 5px;
+  filter: brightness(70%);
+  transition: all .7s ease;
+}
+
+.project-card img:hover {
+
+  filter: brightness(60%)
+}
+
+.project-card h3 {
+  font-weight: 500;
+  padding: 1.5rem 0 .5rem;
+  letter-spacing: .8px;
+}
+
+.project-attributes {
+  color: #B0B0B0;
+  font-weight: 400;
+  font-size: 1.15rem;
+}
+
+.separator {
+  margin: 0 1rem;
+}
+
+/* Section */
+section h2 {
+  font-size: 4rem;
+  font-weight: 400;
+  grid-column: 1
+}
+
+section .content {
+  grid-column: 2;
+}
+
+.about.row,
+.skills.row,
+.contact.row {
+  align-items: baseline;
+}
+
+.about p {
+  /* padding-right: 50px; */
+  font-size: 1.2rem;
+  font-weight: 400;
+  color: #B3B3B3;
+  line-height: 2.2rem;
+}
+
+.about .separator,
+.skills .separator,
+.contact .separator {
+  font-size: 4rem;
+  color: #FFF;
+  display: block;
+  margin: 4rem 0 -1.5rem 0;
+}
+
+.about .sub,
+.skills .sub,
+.contact .sub {
+  font-size: 1.5rem;  
+  color: #FFF;
+  display: block;
+  margin: 1.5rem 0;
+}
+
+/* Skills Section */
+.skills-container {
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  gap: 40px;
+}
+
+.skills-container .skill {
+  display: flex;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  font-size: 70px;
+  color:rgba(255 , 255, 255, .45)
 }
 
-.App-link {
-  color: #61dafb;
+.skills .sub {
+  margin-bottom: 2.5rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.skills .separator {
+  padding-top: 1rem;
+}
+
+/* Contact Section */
+.contact label {
+  font-size: 1.5rem;
+}
+
+.contact input,
+.contact textarea,
+.contact button {
+  width: 100%;
+  background-color: #606060;
+  display: block;
+  padding: 1rem;
+  margin: 1.5rem 0 3rem;
+  border: none;
+  outline: none;
+  border-radius: .3rem;
+  color: #FFF;
+  font-size: 1.4rem;
+}
+
+.contact textarea {
+  min-height: 140px;
+}
+
+.contact button {
+  background-color: #000;
+  border: 3px solid #606060;
+}
+
+.contact form {
+  border-top: 1px solid #606060;
+  padding: 30px 0;
+  margin-top: 30px;
+}
+
+/* Footer Styles */
+footer {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 2.5rem;
+}
+
+footer p {
+  margin: auto;
 }
