--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
 }
 
 body {
-  background: rgba(0,0,0, .95);
+  background: rgba(0,0,0, .97);
   color: #FFF;
   font-family: 'Epilogue', sans-serif;
 }
@@ -38,7 +38,7 @@ p {
   display: flex;
   position: fixed;
   width: 100%;
-  background: rgba(0,0,0, .95);
+  background: rgba(0,0,0, .97);
   justify-content: space-between;
   align-items: center;
   padding: 2.5rem;
@@ -59,6 +59,7 @@ p {
 .logo {
   font-size: 24px;
   letter-spacing: 3px;
+  color: #FFF;
 }
 
 /* Hero Section */
